# tejos

./: README.md  pyproject.toml
data/db/: backup-tournament.ttl  fantasy-backup.ttl  fantasy.ttl  players.ttl  tejos-backup.ttl  tejos-backup2.ttl  tejos.ttl
http/: ao-2024.http  wm-2024.http
sh/: restore-juki-teams.sh  sh.sh
tejos/: config.py
tejos/adapter/: __init__.py  ao_draw_parser.py  discord.py  us_draw_parser.py  wm_draw_parser.py
tejos/cli/: __init__.py  fantasy.py  helpers.py  players.py  tournament.py  util.py
tejos/command/: __init__.py  commanda.py  controller.py  fantasy.py  graph_generator.py  helpers.py  leaderboard.py  players.py  tournament.py
tejos/dataframe/: explain_results_to_df.py
tejos/fantasy/: __init__.py  helpers.py  points_strategy.py  selections.py  teams.py
tejos/graph/: graph.py  rdf_prefix.py
tejos/initialiser/: db.py
tejos/majors/: tournaments.py
tejos/model/: __init__.py  base.py  draw.py  entry.py  errors.py  fantasy.py  feature.py  match.py  model.py  player.py  results.py  results_value.py  round.py  set.py  tournament.py  tournament_event.py  uri.py
tejos/ontology/: fantasy_teams.ttl  ontology.ttl  out.ttl  players.ttl
tejos/players/: atp_players.py  players.py  wta_players.py
tejos/plot/: fantasy_plot.py
tejos/presenter/: __init__.py  code_creator_presenter.py  df_table_presenter.py  explain_presenter.py  parquet_presenter.py  player_presenter.py  plot_channel_sender.py
tests/: conftest.py  test_fantasy.py  test_leaderboard.py  test_match.py  test_players.py  test_tournament_graph.py
(+159 files in other folders)
